# rag-simple

./: README.md  app.py  pyproject.toml  rag.py
db/: chroma.sqlite3
docs/: doc-01-resep-nasi-goreng.md  doc-02-travel-bali.md  doc-03-meeting-notes-2025-02-22.md  doc-04-project-overview.md  doc-05-book-summary.md  doc-06-tutorial-git-basics.md  doc-07-jurnal-harian.md  doc-08-product-spec.md  doc-09-faq.md  doc-10-checklist-pindah-rumah.md  doc-11-panduan-python-lengkap.md  doc-12-arsitektur-microservices.md  doc-13-panduan-seo-lengkap.md  doc-14-sejarah-internet-dan-web.md  doc-15-panduan-keuangan-pribadi.md  doc-16-api-rest-best-practices.md  doc-17-panduan-fotografi-dasar.md  doc-18-nutrisi-dan-diet-seimbang.md  doc-19-pengenalan-machine-learning.md  doc-20-panduan-menulis-blog.md  doc-21-database-normalization.md  doc-22-docker-dan-container.md  doc-23-panduan-presentasi-efektif.md  doc-24-pemrograman-fungsional-dasar.md  doc-25-manajemen-waktu-dan-produktivitas.md  doc-26-keamanan-aplikasi-web.md  doc-27-panduan-negotiation.md  doc-28-typescript-dasar.md  doc-29-panduan-membaca-cepat.md  doc-30-cloud-computing-overview.md  doc-31-react-hooks-mendalam.md  doc-32-sql-query-optimization.md  doc-33-panduan-public-speaking.md  doc-34-etika-bisnis-dan-keputusan.md  doc-35-graphql-vs-rest.md  doc-36-pemrograman-async-javascript.md  doc-37-lean-startup-methodology.md  doc-38-testing-strategies.md  doc-39-design-systems.md  doc-40-komunikasi-remote-team.md  (+10 more)
